tests/NormalTests/paczka1/fuzzy1/42913318.err
Error in line 5: QQASKH S689 159,5
Error in line 33: shwexYG A642 57,3
